2006-02-22  Thomas Hellstrom  <thomas-at-tungstengraphics.com>

	* src/via_vt162x.c: (VT1622ModeCrtc):
	Don't depend on BIOS to enable the TV-out controller of
	Unichrome Pros (openChrome Chgset 107)
	
2006-02-22  Thomas Hellstrom  <thomas-at-tungstengraphics.com>

	* src/via_dri.c: (VIADRIKernelInit), (VIADRIMapInit):
	* src/via_driver.h:
	Add a proper framebuffer map for DRI. (openChrome Chgset 144)
	
2006-02-22  Thomas Hellstrom  <thomas-at-tungstengraphics.com>

	* configure.ac:
	* src/via_drmclient.h:
	* src/xvmc/viaXvMC.c:
	* src/xvmc/viaXvMCPriv.h:
	Build fixes for DragonFly. (Reported by Jeremy C. Reed)
	
2006-01-13  Thomas Hellstrom  <unichrome-at-shipmail-dot-org>

	* configure.ac:
	* src/xvmc/Makefile.am:
	* src/xvmc/driDrawable.c: (drawStamp), (getDRIDrawableInfoLocked),
	(driDestroyHashContents):
	* src/xvmc/driDrawable.h:
	* src/xvmc/unichrome/.cvsignore:
	* src/xvmc/unichrome/Makefile.am:
	* src/xvmc/unichrome/viaLowLevel.c:
	* src/xvmc/unichromeProA/.cvsignore:
	* src/xvmc/unichromeProA/Makefile.am:
	* src/xvmc/unichromeProA/viaLowLevelPro.c:
	* src/xvmc/viaLowLevel.c: (hwlLock), (hwlUnlock), (timeDiff),
	(setAGPSyncLowLevel), (viaDMATimeStampLowLevel),
	(viaDMAWaitTimeStamp), (viaDMAInitTimeStamp),
	(viaDMACleanupTimeStamp), (viaMpegGetStatus), (viaMpegIsBusy),
	(syncDMA), (syncVideo), (syncAccel), (syncMpeg), (pciFlush),
	(agpFlush), (flushXvMCLowLevel), (flushPCIXvMCLowLevel),
	(pciCommand), (viaMpegSetSurfaceStride), (viaVideoSetSWFLipLocked),
	(viaVideoSWFlipLocked), (viaMpegSetFB), (viaMpegBeginPicture),
	(viaMpegReset), (viaMpegWriteSlice), (viaVideoSubPictureOffLocked),
	(viaVideoSubPictureLocked), (viaBlit), (syncXvMCLowLevel),
	(initXvMCLowLevel), (setLowLevelLocking), (closeXvMCLowLevel):
	* src/xvmc/viaLowLevel.h:
	* src/xvmc/viaLowLevelPro.c: (initHQVShadow),
	(setHQVHWDeinterlacing), (setHQVDeblocking), (setHQVStartAddress),
	(setHQVColorSpaceConversion), (setHQVFetchLine), (setHQVScale),